--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>GIT lesson</h1>
-	<p>some text</p>
+	
+	<p>dfghdfghfgjghmghjfydjtyjktyujtjtyj</p>
 </body>
 </html>
